permission and dockerization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:D:/loginExample/SpringbootApp/h2/sampledata
+spring.datasource.url=jdbc:h2:D:/NewProject/SpringbootApp/h2/sampledata
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-blacklist.tokens.cleanup.schedule=0 0 0/5 * * ?
+blacklist.tokens.cleanup.schedule=0 0/1 * * * ?
 
 
 # Enable multipart uploads
